fix problem overflow

--- a/assignments/homework1/css/recipe.css
+++ b/assignments/homework1/css/recipe.css
@@ -72,6 +72,7 @@ a {
     display: block;
     font-family: monospace;
     white-space: pre;
+    overflow-x: auto;
 
 }
 
